# pwgen

./: Makefile  README.md  debug.py  pwgen.py  pyproject.toml  setup.cfg
src/pwgen/: __init__.py
tests/: test_version.py
