[tool.poetry]
name = "pwgen"
version = "0.0.0"
license = "GPL-3.0-only"
authors = ["netzego <no-reply@github.com>"]
description = "A skeleton for python projects with poetry in a makefile"
readme = "README.md"
homepage = "https://github.com/netzego/pwgen"
repository = "git@github.com:netzego/pwgen.git"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
pwgen = "pwgen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
